--- a/package.json
+++ b/package.json
@@ -33,5 +33,13 @@
     "light"
   ],
   "author": "Sho Hashimoto <hashimoto@shokai.org>",
-  "license": "MIT"
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/shokai/node-philips-hue.git"
+  },
+  "bugs": {
+    "url": "https://github.com/shokai/node-philips-hue/issues"
+  },
+  "homepage": "https://github.com/shokai/node-philips-hue"
 }
