run coffeelint on Travis-CI  #1   * read package.json in Grunt   * add .travis.yml   * add Travis-CI Status badge on README

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": false,
   "main": "lib/philips-hue.js",
   "scripts": {
-    "test": "grunt test"
+    "test": "grunt test",
+    "build": "grunt build"
   },
   "bin": {
     "philips-hue": "./bin/philips-hue.coffee"
