--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "private": false,
   "main": "lib/philips-hue.js",
   "scripts": {
-    "test": "grunt test",
-    "build": "grunt build",
-    "watch": "grunt"
+    "mocha": "mocha test/test_*.es6 --compilers js:babel-register",
+    "eslint": "eslint *.es6 src/*.es6 test/*.es6",
+    "test": "npm run eslint && npm run mocha",
+    "build": "babel src/ --out-dir lib/ --source-maps inline",
+    "watch": "parallelshell 'npm run build -- --watch' 'chokidar \"(src|test)/*.es6\" -c \"npm test\"'"
   },
   "bin": {
-    "philips-hue": "./bin/philips-hue.coffee"
+    "philips-hue": "./bin/cli.js"
   },
   "dependencies": {
     "debug": "*",
@@ -18,16 +20,15 @@
     "request": "*"
   },
   "devDependencies": {
-    "coffee-script": "^1.9",
-    "coffee-errors": "*",
-    "mocha": "*",
-    "grunt": "*",
-    "grunt-cli": "*",
-    "grunt-simple-mocha": "*",
-    "grunt-notify": "*",
-    "grunt-contrib-coffee": "*",
-    "grunt-coffeelint": "*",
-    "grunt-contrib-watch": "*"
+    "babel-cli": "^6.4.5",
+    "babel-eslint": "^4.1.6",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-register": "^6.4.3",
+    "chai": "^3.5.0",
+    "chokidar-cli": "^1.2.0",
+    "eslint": "^1.10.3",
+    "mocha": "^2.4.5",
+    "parallelshell": "^2.0.0"
   },
   "keywords": [
     "philips",
