install eslint-plugin-if-in-test

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "chai": "^3.5.0",
     "chokidar-cli": "^1.2.0",
     "eslint": "^1.10.3",
+    "eslint-plugin-if-in-test": "^0.1.2",
     "mocha": "^2.4.5",
     "parallelshell": "^2.0.0"
   },
