--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "lib/philips-hue.js",
   "scripts": {
     "mocha": "mocha test/test_*.es6 --compilers js:babel-register",
-    "eslint": "eslint *.es6 src/*.es6 test/*.es6 samples/*.js",
+    "eslint": "eslint *.es6 src/*.es6 test/*.es6",
     "test": "npm run eslint && npm run mocha",
     "build": "babel src/ --out-dir lib/ --source-maps inline",
     "watch": "parallelshell 'npm run build -- --watch' 'chokidar \"(src|test)/*.es6\" -c \"npm test\"'"
