monorepo  #9 - separate CLI package - build & test from root directory - add CLI test
removed mocha.opts

--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,6 @@
     "browser": false
   },
   "plugins":[
-    "if-in-test"
   ],
   "rules":{
     "strict": [2, "global"],
@@ -18,7 +17,6 @@
     "no-loop-func": 0,
     "curly": 0,
     "no-constant-condition": 1,
-    "no-console": 1,
-    "if-in-test/if": [1, {"directory": "test"}]
+    "no-console": 1
   }
 }
