rewrite CLI - install babel stage-0 - use async/await - switch optparse -> minimist

--- a/packages/philips-hue-cmd/package.json
+++ b/packages/philips-hue-cmd/package.json
@@ -8,8 +8,9 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "babel-polyfill": "^6.3.14",
     "debug": "*",
-    "optparse": "*",
+    "minimist": "^1.2.0",
     "philips-hue": "^1.1.0"
   },
   "author": "Sho Hashimoto <hashimoto@shokai.org>",
