--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-cli": "^6.4.5",
     "babel-eslint": "^4.1.8",
     "babel-preset-es2015": "^6.3.13",
+    "babel-preset-stage-0": "^6.3.13",
     "babel-register": "^6.4.3",
     "chai": "^3.5.0",
     "chokidar-cli": "^1.2.0",
