--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,7 @@
     "browser": false
   },
   "plugins":[
+    "if-in-test"
   ],
   "rules":{
     "strict": [2, "global"],
@@ -17,6 +18,7 @@
     "no-loop-func": 0,
     "curly": 0,
     "no-constant-condition": 1,
-    "no-console": 1
+    "no-console": 1,
+    "if-in-test/if": [1, { "directory": ["test", "packages/*/test" ] }]
   }
 }
