--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,10 @@
 {
-  "extends": "eslint:recommended",
+  "extends": ["eslint:recommended"],
   "parser": "babel-eslint",
   "env":{
     "node": true,
-    "browser": false
+    "browser": false,
+    "es6": true
   },
   "plugins":[
     "if-in-test"
@@ -18,7 +19,7 @@
     "no-loop-func": 0,
     "curly": 0,
     "no-constant-condition": 1,
-    "no-console": 1,
+    "no-console": [1, {"allow": ["warn", "error"]}],
     "if-in-test/if": [1, { "directory": ["test", "packages/*/test" ] }]
   }
 }
